# dms-email-client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
dmsEmailClient/: DmsEmailClientSettings.qml  DmsEmailClientWidget.qml  plugin.json
docs/superpowers/plans/: 2026-07-05-email-translation.md
docs/superpowers/specs/: 2026-07-05-email-translation-design.md
src/: config.rs  daemon.rs  ipc.rs  mailhtml.rs  main.rs  segment.rs  sysmem.rs  translate.rs
src/daemon/: commands.rs  imap_sync.rs  mod.rs  state.rs
