[package]
name = "dms-email-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
imap = "2.4.1"
native-tls = "0.2"
mail-parser = "0.11"
notify-rust = "4"
notify = "6"
dirs = "5.0"
chrono = "0.4"
regex = "1"
ct2rs = "0.9"
whatlang = "0.16"
hf-hub = "0.3"
